--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "start": "egg-bin dev",
     "cov": "egg-bin cov",
 
-    "dev": "egg-bin dev",
-    "start-dev": "EGG_SERVER_ENV=dev egg-scripts start  --daemon --title=shangcheng-dev",
+    "dev": "egg-bin  --port=7011 dev",
+    "start-dev": "EGG_SERVER_ENV=dev egg-scripts start  --port=7011 --daemon --title=shangcheng-dev",
     "stop-dev": "egg-scripts stop --title=shangcheng-dev",
 
     "test": "EGG_SERVER_ENV=test  egg-bin --port=7013 dev",
     "start-test": "EGG_SERVER_ENV=test egg-scripts start --port=7013 --daemon --title=shangcheng-test",
     "stop-test": "egg-scripts stop --title=shangcheng-test",
 
-    "prod": "EGG_SERVER_ENV=prod  egg-bin dev",
-    "start-prod": "EGG_SERVER_ENV=prod egg-scripts start --port=7001 --daemon --title=shangcheng-prod",
+    "prod": "EGG_SERVER_ENV=prod  egg-bin --port=7016  dev",
+    "start-prod": "EGG_SERVER_ENV=prod egg-scripts start --port=7016 --daemon --title=shangcheng-prod",
     "stop-prod": "egg-scripts stop --title=shangcheng-prod",
     "restart-prod": "npm run stop-prod && npm run start-prod"
 
