--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "egg": "^2.22.0",
     "egg-cors": "^2.2.0",
     "egg-mongoose": "^3.2.0",
+    "egg-redis": "^2.4.0",
     "egg-sequelize": "^5.1.0",
+    "egg-session-redis": "^2.1.0",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "uid-safe": "^2.1.5"
